--- a/public/stylesheets/scss/_global.scss
+++ b/public/stylesheets/scss/_global.scss
@@ -591,7 +591,6 @@ body .tote-wrap{
                 left: 0;
                 width: 80%;
                 height: 80%;
-                overflow: hidden;
                 
                 *{
                     color: #fff;
